# deploy-django-with-docker-compose

./: .dockerignore  .env.sample  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  devbox.json  docker-compose-db.yml  docker-compose-deploy.yml  docker-compose.yml  process-compose.yaml  pyproject.toml  requirements.txt
.devbox/virtenv/nginx/: process-compose.yaml
app/: settings.py  urls.py
app/app/: settings.py
devbox.d/nginx/: nginx.template.fastcgi  nginx.template.gunicorn  nginx.template.uwsgi
proxy/: Dockerfile  default.conf.tpl  run.sh
scripts/: run.sh
